<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Formulário</string>
    <string name="action_settings">Settings</string>
    <string name="action_send">Enviar</string>
    <string name="action_save">Gardar</string>

    <!-- Send -->

    <string name="txtNombre">Nombre</string>
    <string name="txtApellido">Apellido</string>
    <string name="tituloSexo">Soy...</string>
    <string name="fomrSexo01">Hombre</string>
    <string name="fomrSexo02">Mujer</string>
    <string name="tituloCumple">Naci el ...</string>
    <string name="hintCumple">dd/mm/aaaa</string>
    <string name="tituloEstTra">Actualmente estoy...</string>
    <string name="checkEstudio">Estudiando</string>
    <string name="checkTrabajo">Tabajando</string>
    <string name="tituloPeso">Peso</string>
    <string name="txtButtonEnviar">Enviar</string>
    <string name="txtCondiciones">He leido y acepto las condiciones</string>
    <string name="title_activity_getdatos">getdatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="tituloswitchUni">Los estudios son universitarios</string>




    <!-- Get -->
    <string name="txtGetNombre">Te llamas</string>
    <string name="txtGetApellido">Tus apellidos son</string>
    <string name="txtGetSexo">Eres</string>
    <string name="txtGetFecha">Nacistes el</string>
    <string name="txtGetPeso">Pesas</string>



</resources>
